# tokkenly-rust

./: Cargo.toml  README.md  database_setup.sql
src/: database.rs  main.rs
src/routes/: .hello_user.rs.swp  auth.rs  create_user.rs  hello_user.rs  home.rs  mod.rs
