[package]
name = "tokkenlyrust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = {version="*", features=["derive"]}
serde_json = "1.0"
tokio = {version="*", features=["macros", "rt-multi-thread"]}
sqlx = {version="*", features=["mysql", "runtime-tokio-native-tls"]}
bcrypt = "0.15"
jsonwebtoken = "9.2"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
